syntax = "proto3";

package infrabin;

// Empty is the null value for parameters.
message Empty {

}

message Response {
	string              hostname     = 1;
	KubeResponse        kubernetes   = 2;
	string              liveness     = 3;
	string              delay        = 4;
	string              error        = 5;
	map<string, string> headers      = 6;
	map<string, string> env          = 7;
}

message KubeResponse {
  string  pod_name = 1;
  string  namespace = 2;
  string  pod_ip = 3;
  string  node_name = 4;
}


// The echo infrabin service replies with the message it received.
service Infrabin {
  rpc Root(Empty) returns (Response) {}
}
